<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".detail"
>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
                android:id="@+id/tv_set_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cat_name"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" android:fontFamily="@font/montserrat"/>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
        >
            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_item_photo"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginRight="16dp"
                    android:src="@android:color/darker_gray"/>
        </LinearLayout>
        <TextView
                android:text="@string/karakter"
                style="@style/subjudul" android:fontFamily="@font/montserrat"/>

        <androidx.cardview.widget.CardView
                style="@style/cardView"
                app:cardBackgroundColor="@color/primaryLightColor">
            <TextView
                    android:text="@string/content_karakter"
                    android:textColor="@android:color/black"
                    android:textAlignment="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_set_karakter"
                    android:fontFamily="@font/montserrat"/>
        </androidx.cardview.widget.CardView>

        <TextView
                android:text="@string/asal"
                style="@style/subjudul" android:fontFamily="@font/montserrat"/>
        <androidx.cardview.widget.CardView
                style="@style/cardView"
                app:cardBackgroundColor="@color/primaryLightColor">
            <TextView
                    android:text="@string/content_asal"
                    android:textColor="@android:color/black"
                    android:layout_margin="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_set_asal"
                    android:fontFamily="@font/montserrat"/>
        </androidx.cardview.widget.CardView>

        <TextView
                android:text="@string/habit"
                style="@style/subjudul" android:fontFamily="@font/montserrat"/>
        <androidx.cardview.widget.CardView
                style="@style/cardView"
                app:cardBackgroundColor="@color/primaryLightColor">
            <TextView
                    android:text="@string/content_habit"
                    android:textColor="@android:color/black"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_width="379dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_set_habit"
                    android:fontFamily="@font/montserrat"/>
        </androidx.cardview.widget.CardView>
        <TextView
                android:text="@string/TnT"
                style="@style/subjudul" android:fontFamily="@font/montserrat"/>

        <androidx.cardview.widget.CardView
                style="@style/cardView"
                app:cardBackgroundColor="@color/primaryLightColor">
            <TextView
                    android:text="@string/content_TnT"
                    android:textColor="@android:color/black"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_set_TnT"
                    android:fontFamily="@font/montserrat"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>